[metadata]
name = curequests
description =  "Curio + Requests: Async HTTP for Humans"
version = 0.0.1
author = guyskk
author_email = guyskk@qq.com
url = https://github.com/guyskk/curequests
license = MIT
keywords = network, request, http
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
install_requires = 
    httptools
    yarl
    curio
    requests
packages = find:

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1
